# QRCodeSource

./: .gitignore  .gitmodules  .travis.yml  Makefile.am  QRCodeSource.sln  README.md  Test.avs  Test.vpy  configure.ac  preview.avs
QRCodeSource/: QRCodeSource.cpp  QRCodeSource.vcxproj  QRCodeSource.vcxproj.filters  QRCodeSourceVS.vcxproj  QRCodeSourceVS.vcxproj.filters  RandomSource.cpp  SimpleSample.cpp
